   * Fixed issues with the ~BG() image path function not always working with
     cached images.
   * Idle controlled sides now serialize as human controlled.
   * Fixed bug #20876: A segfault in cut_surface.
   * Dropped support for AmigaOS, BeOS, and OS/2.
   * Increased the sound mixer channel allocation from 16 to 32, thereby
     raising the limit for simultaneous sound effects from 5 to 21.
   * Fix bug #21758: "Ready not blocked while player pick faction."
   * Fix bug #18829: "ai sides show up as "controller=network" on remote
     clients". This issue is the source of some difficulties with mp campaigns
     which occur when the campaign is reloaded from a non-host side, or after a
     player rejoins from observer status. Hopefully, reloading campaigns is
     easier after this.
   * Fix bug #21797: "Mandatory WML child missing" when leaving a reloaded game.
   * Fix bug #21808: Cannot join a reloaded game as an observer.
   * Fixed halos glitching through locations that become shrouded after the
     halo is rendered for the first time.
   * OS X user data directory is now ~/Library/Application Support/Wesnoth_1.13
   * Fix bug #21257: Lagging animations with skip AI animations and fog/shroud.
   * Improved unicode handling on windows for characters outside the Basic
     Multilingual Plane.
   * Fix bug #3856: The turn dialog used in hotseat MP play now applies
     a blindfold for the duration of the dialog.
   * Petrified units are no longer displayed in the "Damage versus" tooltip.
   * Fix bug #21759: "timer refreshed too often when time runs out"
   * Use one combo box instead of check boxes for replay options "skip replay"
     and "enter blindfold". This fixes the mp lobby in width <= 800 resolutions.
     Fixes bug #21888.
   * MP server now commits controller changes to the replay rather than updating
     as we go along. Among other things these means that players that join an